@@ -1,24 +1,8 @@
 DIST Text-Aspell-0.06.tar.gz 13343 RMD160 e4f6a084566d518f52c80c78d65e37d3c763de71 SHA1 928c4f9ace4d05482ce33fbdd64ac97f2bca7d7f SHA256 12bdbca30831d8e01271b4cdf35b1f2abb1c9c7d8530f138711f44aa0dd671f7
 DIST Text-Aspell-0.07.tar.gz 13483 RMD160 39b5807e0290f2451c15f32ea1baaa69c9bac4e8 SHA1 675cac88d6cb92e65762914be879c0fd74d1bbab SHA256 f880ac96640c177a6a71307d41d400f3671408cd788b53c3e467698e81e6a53a
+DIST Text-Aspell-0.08.tar.gz 13514 RMD160 0387d41ec01abf189f4b5807b3b3ba9f657af3a4 SHA1 6219b93b12ce46e31996d949bddbaa2640e1fd36 SHA256 d28da8a6a2df7a83989f7a05a822bf2b4863fbf5e17c16adfa454c9bad5c99f6
 EBUILD Text-Aspell-0.06.ebuild 612 RMD160 cdf670099ad54b23f11301910ab7796f401c42b3 SHA1 02186c2535f0b6e36ec8524614aa0b1433f2f5da SHA256 4ff417d6dd1f85eaaf74735de77e04a641242e97b1177ee9fe0af8d3def9b8ef
-MD5 d5b3c5e0311804769b6b403502a9a5c0 Text-Aspell-0.06.ebuild 612
-RMD160 cdf670099ad54b23f11301910ab7796f401c42b3 Text-Aspell-0.06.ebuild 612
-SHA256 4ff417d6dd1f85eaaf74735de77e04a641242e97b1177ee9fe0af8d3def9b8ef Text-Aspell-0.06.ebuild 612
 EBUILD Text-Aspell-0.07.ebuild 629 RMD160 74a7c525ac8d33f140fdd591855d063c9eb7a461 SHA1 fbe5b567b82f7d6eaf5fda32801584d6b70629dd SHA256 b5193897027c5632890813529451dd9311d1a72c8a0e397a8a98347cab599286
-MD5 19233682303eaf4a0a4426cb6e04a68c Text-Aspell-0.07.ebuild 629
-RMD160 74a7c525ac8d33f140fdd591855d063c9eb7a461 Text-Aspell-0.07.ebuild 629
-SHA256 b5193897027c5632890813529451dd9311d1a72c8a0e397a8a98347cab599286 Text-Aspell-0.07.ebuild 629
-MISC ChangeLog 3728 RMD160 d9af196e4ef3f1d6642f10f8f752a7dabc284bc4 SHA1 6b429c62b59e4ef106cfa9ae39a31c871e4c1cc8 SHA256 53bb809d189ecfa38e280eff5e54a63a8ba0791db1a4061cf557c16498a4bd6e
-MD5 a1f3ef2871238fa658e4739d50479d35 ChangeLog 3728
-RMD160 d9af196e4ef3f1d6642f10f8f752a7dabc284bc4 ChangeLog 3728
-SHA256 53bb809d189ecfa38e280eff5e54a63a8ba0791db1a4061cf557c16498a4bd6e ChangeLog 3728
+EBUILD Text-Aspell-0.08.ebuild 629 RMD160 cc46dc8981e61d0ab2835eaa5a1b11419186ad70 SHA1 0218091d865e85fef2261c853058fc5623cd89e1 SHA256 2079704040c230cf1b08b8a855217f8cfc343cb521bccee90bfc89750684f5f3
+MISC ChangeLog 3860 RMD160 a5e716d79da7a2b4e4ab071cc9a1f9605b217f0e SHA1 cca6834cc2e3faa4c10e1e9039cfdfe9f0e53130 SHA256 bf4a68962688247f4b6c434c6d7b70af6ff6198a389a766265f1033e0a9c5753
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
-MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
-RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
-SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata.xml 305
-MD5 530d27472172d6eb726cce11ec96ed19 files/digest-Text-Aspell-0.06 247
-RMD160 eff7114bcccd088501551e42b6caae2a8a2d00ec files/digest-Text-Aspell-0.06 247
-SHA256 00d8694b689c5d1f2eb04f369307ca7a4f0417436024c8d436b6a554ce838a91 files/digest-Text-Aspell-0.06 247
-MD5 65b231b8e4570f4520df0ce2df0f43b4 files/digest-Text-Aspell-0.07 247
-RMD160 9483bcc56aef13dadb3fd88526846cb18b9d67aa files/digest-Text-Aspell-0.07 247
-SHA256 dedb157d0b7040ef3fd851b2d7b13a1c5b76cd3955ef808e05a031ae7b91067c files/digest-Text-Aspell-0.07 247
