@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Text-Aspell
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Aspell/ChangeLog,v 1.30 2007/04/16 11:45:51 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Aspell/ChangeLog,v 1.31 2007/05/12 15:06:22 mcummings Exp $
+
+*Text-Aspell-0.08 (12 May 2007)
+
+  12 May 2007; Michael Cummings <mcummings@gentoo.org>
+  +Text-Aspell-0.08.ebuild:
+  Version bump
 
 *Text-Aspell-0.07 (16 Apr 2007)
 
